apps/whisparr/components/tailscale/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whisparr
  namespace: shikanime
  annotations:
    tailscale.com/tags: tag:web
    tailscale.com/proxy-class: nishir-whisparr
spec:
  ingressClassName: tailscale
